packages/toolkit/components/header/_header.scss
/* ... */
.ofh-header__mobile-subnav {
  display: block;
}

.ofh-header__mobile-panel[hidden],
.ofh-header__mobile-subnav[hidden] {
  display: none;
}

.ofh-header__mobile-subnav-link {
  @include ofh-typography-responsive('paragraph-sm');
  @include ofh-header-link-no-visited-state(
    var(--ofh-header-list-item-color),
    var(--ofh-header-list-item-color),
    null,
    var(--ofh-header-list-item-color)
  );

  align-items: center;
  background-color: var(--ofh-header-list-item-background);
  color: var(--ofh-header-list-item-color);
  display: flex;
  min-height: 56px;
  text-decoration: none;
  width: 100%;

  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  &:hover {
    background-color: var(--ofh-header-list-item-background);
    text-decoration: underline;
  }
}

.ofh-header__mobile-subnav-link--current {
  background-color: $ofh-color-background-primary;
  border-left: $ofh-stroke-weight-4 solid var(--ofh-header-list-item-selected-border);
  color: $ofh-color-foreground-primary;
  text-decoration: none;

  &:hover {
    background-color: $ofh-color-background-primary;
    text-decoration: none;
  }
}

.ofh-header__mobile-subnav-item + .ofh-header__mobile-subnav-item {
  border-top: 1px solid $ofh-color-border-primary;
}

@include mq($from: desktop) {
  .ofh-header__header-desktop-tools {
    display: inline-flex;
  }

  .ofh-header__navigation {
    display: block;
  }

  .ofh-header__menu-button,
  .ofh-header__mobile-panel {
    display: none;
  }
}

@include mq($until: desktop) {
  .ofh-header__section-inner {
    margin-left: 0;
    margin-right: 0;
    max-width: none;
    width: 100%;
  }

  .ofh-header__utility-list {
    @include ofh-responsive-padding(16, 'horizontal');
  }

  .ofh-header__header-layout {
    padding-right: $ofh-size-16;
  }
}

